--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jquery": "^3.2.1",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
+    "mint-ui": "^2.2.9",
     "vue": "^2.5.2",
     "vue-cropper": "^0.2.5",
     "vue-router": "^3.0.1"
