--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
     "mint-ui": "^2.2.9",
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.6",
     "vue": "^2.5.2",
     "vue-cropper": "^0.2.5",
     "vue-router": "^3.0.1"
